WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
106880
[Qt] Fix ImageDiff's image format conversion
https://bugs.webkit.org/show_bug.cgi?id=106880
Summary
[Qt] Fix ImageDiff's image format conversion
Andras Becsi
Reported
2013-01-15 01:02:33 PST
[Qt] Fix ImageDiff's image format conversion
Attachments
Patch
(1.60 KB, patch)
2013-01-15 01:05 PST
,
Andras Becsi
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andras Becsi
Comment 1
2013-01-15 01:05:05 PST
Created
attachment 182716
[details]
Patch
Andras Becsi
Comment 2
2013-01-15 01:06:38 PST
(In reply to
comment #1
)
> Created an attachment (id=182716) [details] > Patch
Ossy, could you check if this alters the results on the bot?
Csaba Osztrogonác
Comment 3
2013-01-15 01:31:01 PST
Comment on
attachment 182716
[details]
Patch Nice catch. :) There aren't too many faiing tests on the pixel bot, so it's safe to land it now.
Andras Becsi
Comment 4
2013-01-15 01:35:20 PST
Comment on
attachment 182716
[details]
Patch Clearing flags on attachment: 182716 Committed
r139727
: <
http://trac.webkit.org/changeset/139727
>
Andras Becsi
Comment 5
2013-01-15 01:35:25 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug