[Qt] Fix ImageDiff's image format conversion https://bugs.webkit.org/show_bug.cgi?id=106880

Reviewed by Csaba Osztrogonác.

Besides actually doing the conversion this also silences the suspicious warning:
"ignoring return value of function declared with warn_unused_result attribute".

* ImageDiff/qt/ImageDiff.cpp:
(main): QImage::convertToFormat, contrary to the assumed behaviour, returns a
copy of the image in the given format and does not alter the image itself.

Canonical link: https://commits.webkit.org/125113@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139727 268f45cc-cd09-0410-ab3c-d52691b4dbfc